v0.4.1 RB 1.3.1-R1.0, 1.3.1-R2.0
* change changeplayer debug to show the actual value of the permissions

v0.4.0 RB 1.2.5-R4.0, 1.2.5-R5.0, 1.3.1-R1.0
* add mcstats.org metrics
* add fancy code-names for future major-releases
* add getGroupNames() to DroxPermsAPI
* add timed Groups and subgroups
  (intended for use over RCON)
* on permission-change display warning if world inherits permissions 

v0.3.1 RB 1.1-R3
* fix DroxPerms not starting if no tracks are defined

v0.3.0 RB 1.1-R3
* fix NPE while calculating subgroups
* update Bukkit dependency to 1.1-R3
* migrate to new Event-system
* migrate to new Config-system
* add logging time of last login and quit
* add modifying TAB-list name via info-node

v0.2.2 RB 1317, 1337, 1597
* fix /cp remsub group not working

v0.2.1 RB 1240, 1317, 1337
* fix /cg new group not telling about success of operation

v0.2.0 RB 1240
* add listperms-commands
* add auto-save
* add tracks
* add group-stats
* add commands to set/unset info-nodes
* add auto-complete on usernames
* add /cp delete <player>

v0.1.6 RB 1060, 1185
* fix getPlayerSubgroups ignoring maingroup

v0.1.5 RB 1060, 1185
* fix users not getting the the right group

v0.1.4 RB 1060
* fix NPE while changing offline players

v0.1.3 RB 1060
* fix permissions not updating when using the API

v0.1.2 RB 1060
* fix permission change on world change
* fix negative Group-permissions

v0.1.1 RB 1060
* fix NPE on kick

v0.1.0 RB 1060
* first release