@@ -1,5 +1,6 @@
 v0.4.1 RB 1.3.1-R1.0, 1.3.1-R2.0
 * change changeplayer debug to show the actual value of the permissions
+* fixed wrong permissions due to wrong defaults
 
 v0.4.0 RB 1.2.5-R4.0, 1.2.5-R5.0, 1.3.1-R1.0
 * add mcstats.org metrics
